--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include VERSION
-recursive-include doc *.rst *.py Makefile make.bat
+recursive-include doc *.rst *.py Makefile make.bat requirements.txt
 recursive-include doc/_static .gitkeep
