--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - "3.6"
+install:
+  - pip install pytest-cov codecov
 script:
-  - python -m pytest
+  - python -m pytest --cov=./
+after_success:
+  - codecov
