--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
       fi;
       sed -i 's/sage\/pypersist-copy/travis\/build\/mtorpey\/pypersist/g' .coverage;
     else
-      python -m pytest --cov=./pypersist;
+      python -m pytest --doctest-modules --cov=./pypersist;
     fi;
 after_success:
   - codecov
