--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include VERSION
+include VERSION requirements.txt
 recursive-include doc *.rst *.py Makefile make.bat requirements.txt
 recursive-include doc/_static .gitkeep
